[workspace]
members = ["dev-log-macros", "dev-log"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Rifine 231310326@mail.dhu.edu.cn"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rifine/dev-log"
edition = "2021"
description = "proc-macro dev helper: auto-injects nested call-stack prefixes to println! in debug builds, vanishes completely in release."

[workspace.dependencies]
dev-log-macros = { version = "0.1.0", path = "dev-log-macros" }