[package]
name = "dev-log-macros"
version = "0.1.2"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Procedural macros for dev-log. Not intended for direct use."

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }

[features]
default = ["stack-trace"]
stack-trace = []