[package]
name = "dev-log"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
dev-log-macros = { workspace = true }

[features]
default = ["allow-print"]
allow-print = []
stack-trace = ["dev-log-macros/stack-trace"]
shadow-std = []