[package]
name = "dev-log"
version = "0.1.31"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "proc-macro dev helper: auto-injects nested call-stack prefixes to println! in debug builds, vanishes completely in release."

[dependencies]
dev-log-macros = { version = "0.1.2" }

[features]
default = ["allow-print", "stack-trace"]
allow-print = []
stack-trace = ["dev-log-macros/stack-trace"]
shadow-std = []